--- a/mysql-simple-typed.cabal
+++ b/mysql-simple-typed.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                mysql-simple-typed
-version:             0.1.1.1
+version:             0.1.1.2
 synopsis:            Typed extension to mysql simple
 -- description:         
 homepage:            https://github.com/tolysz/mysql-simple-typed
@@ -10,7 +10,7 @@ license:             BSD3
 license-file:        LICENSE
 author:              Marcin Tolysz
 maintainer:          tolysz@gmail.com
--- copyright:           
+copyright:           2014-5 Marcin Tolysz
 category:            Database
 build-type:          Simple
 extra-source-files:  README.md
@@ -27,12 +27,7 @@ library
                ,       mysql-simple >= 0.2.2.5
                ,       typedquery
                ,       template-haskell
-               ,       haskell-src-meta
---               ,       parsec
---               ,       aeson
---               ,       bytestring
---               ,       text
---               ,       transformers
                ,       utf8-string
   hs-source-dirs:      src
   default-language:    Haskell2010
+  ghc-options: -Wall -fno-warn-type-defaults
